--- a/front/cambra.html
+++ b/front/cambra.html
@@ -35,7 +35,7 @@
     //判断浏览器是否支持HTML5 Canvas
     window.onload = function () {
         try {
-            //动态创建一个canvas元 ，并获取其2Dcontext。如果出现异常则表示不支持 document.createElement("canvas").getContext("2d");
+            //动态创建一个canvas元 ，并获取2Dcontext。如果出现异常则表示不支持 document.createElement("canvas").getContext("2d");
             document.getElementById("support").innerHTML = "浏览器支持HTML5 CANVAS";
             takePhotos();
         }
